App navigation OOP

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Javascript Lab</title>
 </head>
 <body>
-    
+    <div id="app-navbar"></div>
+    <div id="app-content"></div>
 </body>
 </html>
